[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "shaheemali-kl",email = "147707581+shaheemali-kl@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "cognite-toolkit (==0.6.53)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
